First working basic Mosaic check
Code now checks for Mosaic being enabled, and saves that fact to the returned configuration.

--- a/NVIDIAInfo/NVIDIAInfo.csproj
+++ b/NVIDIAInfo/NVIDIAInfo.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CCD.cs" />
+    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="NVAPI.cs" />
     <Compile Include="NVIDIALibrary.cs" />
     <Compile Include="PInvokeDelegateFactory.cs" />
