[WIP] One step forward, one back
Again didn't work out with my existing struct based solution. WIll need to lookk at another way to do it.

--- a/NVIDIAInfo/NVIDIAInfo.csproj
+++ b/NVIDIAInfo/NVIDIAInfo.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="CCD.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="Helpers.cs" />
     <Compile Include="NVAPI.cs" />
     <Compile Include="NVIDIALibrary.cs" />
     <Compile Include="PInvokeDelegateFactory.cs" />
