--- a/NVIDIAInfo/packages.config
+++ b/NVIDIAInfo/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="NLog" version="4.7.10" targetFramework="net48" />
+  <package id="NvAPIWrapper.Net" version="0.8.1.101" targetFramework="net48" />
 </packages>
