--- a/NVIDIAInfo/packages.config
+++ b/NVIDIAInfo/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EDIDParser" version="1.2.5.4" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="NLog" version="4.7.10" targetFramework="net48" />
   <package id="NvAPIWrapper.Net" version="0.8.1.101" targetFramework="net48" />
