--- a/NVIDIAInfo/NVIDIAInfo.csproj
+++ b/NVIDIAInfo/NVIDIAInfo.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="CCD.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="GDI.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="NVAPI.cs" />
     <Compile Include="NVIDIALibrary.cs" />
