[WIP] Trying to reverse engineer the window messages to move the mainscreen taskbar

--- a/NVIDIAInfo/NVIDIAInfo.csproj
+++ b/NVIDIAInfo/NVIDIAInfo.csproj
@@ -89,6 +89,7 @@
     <Compile Include="SharedLogger.cs" />
     <Compile Include="TaskBarSettings.cs" />
     <Compile Include="TaskBarStuckRectangle.cs" />
+    <Compile Include="Utils.cs" />
     <Compile Include="WinLibrary.cs" />
   </ItemGroup>
   <ItemGroup>
