[WIP] moving to manual grab of taskbar info
The registry key method of grabbing taskbar position doesn't work reliably, so moving to one that actually looks at the taskbar position within Windows OS itself

--- a/NVIDIAInfo/NVIDIAInfo.csproj
+++ b/NVIDIAInfo/NVIDIAInfo.csproj
@@ -88,7 +88,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharedLogger.cs" />
     <Compile Include="TaskBarSettings.cs" />
-    <Compile Include="TaskBarStuckRectangle.cs" />
+    <Compile Include="TaskBarLayout.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="WinLibrary.cs" />
   </ItemGroup>
