--- a/NVIDIAInfo/NVIDIAInfo.csproj
+++ b/NVIDIAInfo/NVIDIAInfo.csproj
@@ -86,6 +86,7 @@
     <Compile Include="PInvokeDelegateFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RestartManagerSession.cs" />
     <Compile Include="SharedLogger.cs" />
     <Compile Include="TaskBarSettings.cs" />
     <Compile Include="TaskBarLayout.cs" />
