[WIP] Added GPU section NvAPIWrapper code
Note - still have to add the DRS settings section, and still to convert NVIDIALibrary to use the newly copied code.

--- a/NVIDIAInfo/NVIDIAInfo.csproj
+++ b/NVIDIAInfo/NVIDIAInfo.csproj
@@ -91,6 +91,7 @@
     <Compile Include="NvDisplay.cs" />
     <Compile Include="NvExceptions.cs" />
     <Compile Include="NvGeneral.cs" />
+    <Compile Include="NvGPU.cs" />
     <Compile Include="NvHelpers.cs" />
     <Compile Include="NvMosaic.cs" />
     <Compile Include="OldHelpers.cs" />
