[WIP] Added DRS and Stereo features
Next step is to add the Native API wrappers to hide things like memory management from the NVIDIALibrary. Will look at adjusting NVAPI.cs to hold the API functions in a single class. Need to also add the NVIDIA library management (initialisation etc) class from NVIDIA.cs into the API function class too.

--- a/NVIDIAInfo/NVIDIAInfo.csproj
+++ b/NVIDIAInfo/NVIDIAInfo.csproj
@@ -89,11 +89,13 @@
     <Compile Include="NvConstants.cs" />
     <Compile Include="NvDelegates.cs" />
     <Compile Include="NvDisplay.cs" />
+    <Compile Include="NvDRS.cs" />
     <Compile Include="NvExceptions.cs" />
     <Compile Include="NvGeneral.cs" />
     <Compile Include="NvGPU.cs" />
     <Compile Include="NvHelpers.cs" />
     <Compile Include="NvMosaic.cs" />
+    <Compile Include="NvStereo.cs" />
     <Compile Include="OldHelpers.cs" />
     <Compile Include="NVAPI.cs" />
     <Compile Include="NVIDIALibrary.cs" />
